[project]
name = "comfyui-tile-upscale-nb2"
version = "2.0.0"
description = "Universal tile upscale nodes for ComfyUI — NB2, ChatGPT-Image-2, DALL-E-3, SDXL, Topaz-passthrough. N×M grid (2×2…4×4)."
license = { text = "Apache-2.0" }

[project.urls]
Repository = "https://github.com/amortegui84/comfyui-tile-upscale-nb2"

[tool.comfy]
PublisherId = "amortegui84"
DisplayName = "Tile Upscale Universal"
Icon = ""
