[project]
name = "comfyui-tile-upscale-am"
version = "0.1.0"
description = "Method-aware tile upscale nodes for ComfyUI with regenerative/faithful stitching and DPI export."
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "torch>=2.0.0",
]

[project.urls]
Repository = "https://github.com/amortegui84/comfyui-tile-upscale-AM"

[tool.comfy]
PublisherId = "amortegui84"
DisplayName = "Tile Upscale AM"
Icon = ""
